OpenAPI changes
