# backend/config/openapi.yaml
@@ -9,38 +9,51 @@ servers:
 
 paths:
 
-  #/lobby/create?token=xxxxxxxxxxxxxxxx
   /lobby/:
-
     post:
       summary: Creates a new lobby
-      operationId: api.lobby_create_post
+      operationId: api.create_lobby
       tags:
         - Lobby
-      parameters:
-        - in: query
-          name: token
-          description: The user token of the user creating the lobby
-          required: true
-          schema:
-            type: string
+      requestBody:
+        description: The user token of the user creating the lobby
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
       responses:
         '200':
-          description: Returns unique lobby token
+          description: Returns unique user and lobby token
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Lobby'
+                type: object
+                properties:
+                  user:
+                    $ref: '#/components/schemas/User'
+                  lobby:
+                    $ref: '#/components/schemas/Lobby'
 
+  /lobby/{lobby_token}:
     get:
       summary: Gets info about a lobby
-      operationId: api.lobby_get
+      operationId: api.get_lobby
       tags:
         - Lobby
       parameters:
-        - in: query
+        - in: path
           name: lobby_token
           description: The lobby token of the lobby to obtain info on
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: user_token
+          description: The user token of the user creating the lobby
           required: true
           schema:
             type: string
@@ -51,42 +64,56 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Lobby'
+  
 
-  #/lobby/join?lobby_token=xxxxxxxxxxxxxxxx&token=xxxxxxxxxxxxxxxx
-  /lobby/<lobby_token>/join:
+  /lobby/{lobby_token}/join:
     post:
       summary: Joins a lobby
-      operationId: api.lobby_join_post
+      operationId: api.join_lobby
       tags:
         - Lobby
       parameters:
-        - in: query
+        - in: path
           name: lobby_token
           description: The lobby token of the lobby to join
           required: true
           schema:
             type: string
-        - in: query
-          name: token
-          description: The user token of the user joining the lobby
-          required: true
-          schema:
-            type: string
+      requestBody:
+        description: The user token of the user joining the lobby
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
       responses:
         '200':
           description: Returns OK if lobby was joined successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+                
 
-  #/lobby/xxxxxxxxxxxxxxxx/game
   /lobby/{lobby_token}/game/:
     post:
       summary: Creates a new game of streetview bingo
-      operationId: api.game_post
+      operationId: api.create_game
       tags:
         - Game
       parameters:
         - in: path
           name: lobby_token
           description: The lobby token of the lobby to create the game in
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: user_token
+          description: The user token of the user creating the lobby
           required: true
           schema:
             type: string
@@ -105,11 +132,43 @@ paths:
               schema:
                 $ref: '#/components/schemas/Game'
 
-  #/lobby/xxxxxxxxxxxxxxxx/game/xxx/words/xxx/xxx
-  /lobby/{lobby_token}/game/{game_id}/words/{word_id}/{user_id}:
+    put:
+      summary: Changes a game
+      operationId: api.update_game
+      tags:
+        - Game
+      parameters:
+        - in: path
+          name: lobby_token
+          description: The lobby token of the lobby to create the game in
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: user_token
+          description: The user token of the user creating the lobby
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Contains the game information
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Game'
+      responses:
+        '200':
+          description: Returns the id of the created game
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Game'
+
+  /lobby/{lobby_token}/game/{game_id}/words/{word_id}/users/{user_id}:
     post:
       summary: Sets word as found for specified user
-      operationId: api.game_words_post
+      operationId: api.create_word_status
       tags:
         - Game
       parameters:
@@ -137,15 +196,60 @@ paths:
           required: true
           schema:
             type: integer
+        - in: query
+          name: user_token
+          description: The user token of the user creating the lobby
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Returns OK if the word could be set as found
+          
+    delete:
+      summary: Sets previously found word as not found for specified user
+      operationId: api.delete_word_status
+      tags:
+        - Game
+      parameters:
+        - in: path
+          name: lobby_token
+          description: The token of the lobby in which the game is running
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: game_id
+          description: The id of the game to set the word in
+          required: true
+          schema:
+            type: integer
+        - in: path
+          name: word_id
+          description: The id of the word to set
+          required: true
+          schema:
+            type: integer
+        - in: path
+          name: user_id
+          description: The id of user to set the word to found on
+          required: true
+          schema:
+            type: integer
+        - in: query
+          name: user_token
+          description: The user token of the user creating the lobby
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Returns OK if the status was deleted
 
-  #/words?length=9
   /words:
     get:
       summary: Gets list of suggested words
-      operationId: api.words_get
+      operationId: api.get_words
       tags:
         - Words
       parameters:
@@ -167,30 +271,62 @@ paths:
 
 components:
   schemas:
+
     Lobby:
       type: object
       properties:
         id:
           type: integer
-        user_ids:
+        users:
           type: array
           items:
-            type: integer
-        owner_id:
-          type: integer
-        lobby_token:
+            $ref: '#/components/schemas/User'
+        owner:
+          $ref: '#/components/schemas/User'
+        token:
           type: string
+
     Word:
       type: object
       properties:
         id:
             type: integer
-        value:
+        text:
           type: string
+
     Game:
       type: object
       properties:
         id:
           type: integer
         token:
+          type: string
+        status:
+          type: string
+          enum: [created, started, ended]
+        moderator:
+          $ref: '#/components/schemas/User'
+        user:
+          type: array
+          items:
+            $ref: '#/components/schemas/User'
+        words:
+          type: array
+          items:
+            $ref: '#/components/schemas/User'
+        foundStatus:
+          type: object
+          additionalProperties:
+            type: array
+            items:
+              $ref: '#/components/schemas/User'
+
+    User:
+      type: object
+      properties:
+        id:
+            type: integer
+        token:
+          type: string
+        name:
           type: string
